[package]
name = "lsvine"
version = "0.3.0"
authors = ["Shadi Akiki <shadi@autofitcloud.com>"]
edition = "2018"
description = "List contents of directories in a vine-like format."
license = "Apache-2.0"
repository = "https://github.com/autofitcloud/lsvine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
#failure = "0.1.5"
#exitfailure = "0.5.1"
prettytable-rs = "^0.8"
# terminal_size = "0.1.9" # failed to get terminal width
termion = "1.5.4"
colored = "1.9"
tempfile = "3"
